<resources>
    <string name="app_name">Tapcopter</string>
    <string name="main_menu_image_view_content_description">Main menu background image.</string>
    <string name="main_menu_play_button_title">Play!</string>
    <string name="main_menu_scoreboard_button_title">Scoreboard</string>
    <string name="main_menu_settings_button_title">Settings</string>

    <string name="scoreboard_activity_title">Scoreboard</string>
    <string name="scoreboard_current_high_score_label">CURRENT HIGH SCORE</string>
    <string name="scoreboard_previous_high_score_label">Previous High Scores</string>
    <string name="scoreboard_current_best_score_value">%1$d</string>
    <string name="scoreboard_current_best_score_date">%1$s</string>
    <string name="scoreboard_previous_best_score_value_date">%1$d - %2$s</string>

    <string name="settings_activity_title">Settings</string>
    <string name="settings_helicopter_speed_seekbar_title">Helicopter speed: %1$d</string>
    <string name="settings_missle_speed_seekbar_title">Missile frequency: %1$d</string>
    <string name="settings_disclaimer">Any changes will persist automatically</string>
    <string name="settings_reset_settings_button_title">Reset game settings</string>
    <string name="settings_reset_score_button_title">Reset best score</string>
</resources>
