<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.p12202749.tapcopter.activities.MainActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/main_menu_image_view_content_description"
        android:scaleType="fitXY"
        android:src="@drawable/main_menu_bg" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/play_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_play_button_title" />

        <Button
            android:id="@+id/scoreboard_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_scoreboard_button_title" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_settings_button_title" />
    </LinearLayout>


</RelativeLayout>
