<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/speed_bar_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/settings_helicopter_speed_seekbar_title" />

        <SeekBar
            android:id="@+id/speed_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:max="25"
            android:thumb="@drawable/missile_single" />

        <TextView
            android:id="@+id/missle_speed_bar_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/settings_missle_speed_seekbar_title" />

        <SeekBar
            android:id="@+id/missile_speed_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:max="10"
            android:thumb="@drawable/missile_single" />
    </LinearLayout>

    <Button
        android:id="@+id/reset_score_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/danger_action"
        android:text="@string/settings_reset_score_button_title"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/reset_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_reset_settings_button_title"
        android:layout_above="@id/reset_score_button"/>

    <TextView
        android:id="@+id/disclaimer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/reset_settings_button"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/settings_disclaimer" />

</RelativeLayout>
